name:                objcth
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro_at_gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  c-sources:           cbits/wrapper.m
  include-dirs:        cbits
  frameworks:          Foundation
  cc-options:          -Wall -O2
  ghc-options:         -fllvm -optl-ObjC
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable objcth-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -fllvm -optl-ObjC -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , template-haskell
                     , objcth
  default-language:    Haskell2010
